--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,3 +1,11 @@
+
+<%= cl_image_tag("THE_IMAGE_ID_FROM_LIBRARY",
+ width: 400, height: 300, crop: :fill) %>
+
+ <!-- for face detection -->
+ <%= cl_image_tag("IMAGE_WITH_FACE_ID",
+  width: 150, height: 150, crop: :thumb, gravity: :face) %>
+
 <div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('<%= image_path 'cocktails.jpg' %>');">
   <div class="banner-content">
     <h1>Le Wagon's cocktails</h1>
