--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,4 +1,6 @@
 <div class="container">
+  <%= image_tag @article.photo.url(:bright_face) %>
+  <%= cl_image_tag @article.photo, height: 300, width: 400, crop: :fill %>
   <div class="row">
     <div class="col-xs-12">
       <h1><%= @cocktail.name %></h1>
